<resources>
    <string name="app_name">Manabu</string>
    <string name="action_settings">Settings</string>
    <string name="flash">Lecture flash</string>
    <string name="img">Imagerie</string>
    <string name="ana">Anagrammes</string>
    <string name="son">Ecouter le son</string>
    <string name="title_activity_flash">@string/flash</string>
    <string name="title_activity_img">@string/img</string>
    <string name="title_activity_son">@string/son</string>
    <string name="title_activity_anagramme">@string/ana</string>
    <string name="demarrerjeu">Jouer</string>
    <string name="bienJoue">Bien joué !</string>
    <string name="reessaye">Essaye encore...</string>
    <string name="fermer">Fermer</string>
    <string name="refresh">Recharger</string>
    <string name="memo">Mémorisé</string>
    <string name="menu">Menu</string>
    <string name="rejouer">Rejouer</string>
    <string name="retour">Revenir</string>
    <string name="spr">Super, tu es arrivé à la fin.\nQue veux-tu faire ?</string>
    <string name="verifier">Vérifier</string>
    <string name="revoir">Relire</string>
    <string name="moins">-</string>
    <string name="plus">+</string>
    <string name="duree">Secondes d\'affichage</string>
    <string name="niveau">Niveau</string>
    <string name="regles">Règles du jeu</string>
    <string name="regleImg">Mémorise le mot ou la phrase associé(e) à l\'image, puis appuie sur \"Mémorisé\".
        \nÀ l\'aide de l\'image, retrouve ensuite la proposition correcte parmi celles affichées.
        </string>
    <string name="regleFlash">Choisis le temps d\'affichage et mémorise le mot ou la phrase dans le temps imparti.
        \nTape ensuite ce que tu as lu dans la zone blanche et vérifie ta réponse.</string>
    <string name="regleAna">Remets les lettres dans l\'ordre pour former un mot.
        \nLes voyelles sont oranges et les consonnes sont vertes.</string>
    <string name="regleSon">Écoute le son. Selon le niveau, touche le mot contenant le son à
        l\'endroit suivant :\nNiveau 1 : au début\nNiveau 2 : au milieu\nNiveau 3 : n\'importe où</string>
    <string name="img_0">Une plume</string>
    <string name="img_0_1">Une dune</string>
    <string name="img_0_2">Une prune</string>
    <string name="img_1">Un crayon</string>
    <string name="img_1_1">Un canyon</string>
    <string name="img_1_2">Un camion</string>
    <string name="img_2">Une banane</string>
    <string name="img_2_1">Un bandage</string>
    <string name="img_2_2">Un ananas</string>
    <string name="img_3">Une voiture</string>
    <string name="img_3_1">Une toiture</string>
    <string name="img_3_2">Un bus</string>
    <string name="img_4">Une tulipe</string>
    <string name="img_4_1">Une fleur</string>
    <string name="img_4_2">Une rose</string>
    <string name="img_5">Le soleil</string>
    <string name="img_5_1">Une étoile</string>
    <string name="img_5_2">Le sommeil</string>
    <string name="img_6">Un parapluie</string>
    <string name="img_6_1">Un parasol</string>
    <string name="img_6_2">Un parapente</string>
    <string name="img_7">Un crabe</string>
    <string name="img_7_1">Un crâne</string>
    <string name="img_7_2">Une fable</string>
    <string name="img_8">Une chaise</string>
    <string name="img_8_1">Un tabouret</string>
    <string name="img_8_2">Une laisse</string>
    <string name="img_9">Une fourchette</string>
    <string name="img_9_1">Une assiette</string>
    <string name="img_9_2">Une cuillère</string>
    <string name="img_10">Un biscuit</string>
    <string name="img_10_1">Un fruit</string>
    <string name="img_10_2">Un gâteau</string>
    <string name="img_11">Une vache</string>
    <string name="img_11_1">Une valse</string>
    <string name="img_11_2">Un bâche</string>
    <string name="img_12">Un chien</string>
    <string name="img_12_1">Un chou</string>
    <string name="img_12_2">@string/img_19</string>
    <string name="img_13">Une mouette</string>
    <string name="img_13_1">Une chouette</string>
    <string name="img_13_2">Un moulin</string>
    <string name="img_14">Des chaussures</string>
    <string name="img_14_1">Des chaussettes</string>
    <string name="img_14_2">Des lunettes</string>
    <string name="img_15">Un cochon</string>
    <string name="img_15_1">Un cornichon</string>
    <string name="img_15_2">Un carton</string>
    <string name="img_16">Une fusée</string>
    <string name="img_16_1">Un musée</string>
    <string name="img_16_2">Une poupée</string>
    <string name="img_17">Un nuage</string>
    <string name="img_17_1">le ciel</string>
    <string name="img_17_2">Un orage</string>
    <string name="img_18">Une carotte</string>
    <string name="img_18_1">Une marmotte</string>
    <string name="img_18_2">Une tomate</string>
    <string name="img_19">Un chat</string>
    <string name="img_19_1">Un choix</string>
    <string name="img_19_2">Un cheval</string>
    <string name="img_20">Une salade</string>
    <string name="img_20_1">Une balade</string>
    <string name="img_20_2">Une panade</string>
    <string name="img2_0">L\'oiseau a des plumes</string>
    <string name="img2_0_1">L\'oiseau a des poils</string>
    <string name="img2_0_2">L\'oignon a des plumes</string>
    <string name="img2_1">Le singe mange une banane</string>
    <string name="img2_1_1">La banane mange le singe</string>
    <string name="img2_1_2">Le singe ronge une banane</string>
    <string name="img2_2">Un chat dans un arbre</string>
    <string name="img2_2_1">Un chien dans un arbre</string>
    <string name="img2_2_2">Un chat dans un chien</string>
    <string name="img2_3">Une voiture roule en ville</string>
    <string name="img2_3_1">Une moto roule en ville</string>
    <string name="img2_3_2">Un voiture roule en vrille</string>
    <string name="img2_4">C\'est un parterre de tulipes</string>
    <string name="img2_4_1">C\'est un jardin de tulipes</string>
    <string name="img2_4_2">C\'est un parterre de roses</string>
    <string name="img2_5">Le soleil dit bonjour</string>
    <string name="img2_5_1">Le soleil te salue</string>
    <string name="img2_5_2">Le sommeil dit bonjour</string>
    <string name="img2_6">Le poisson nage dans l\'eau</string>
    <string name="img2_6_1">Le poison nage dans l\'eau</string>
    <string name="img2_6_2">Le poisson naît dans l\'eau</string>
    <string name="img2_7">Il y a un cube, une sphère et une pyramide</string>
    <string name="img2_7_1">Il y a un carré, un rond et un triangle</string>
    <string name="img2_7_2">Il y a un cube, un rond, et une pyramide</string>
    <string name="img2_8">Un arc-en-ciel après la pluie</string>
    <string name="img2_8_1">Une arche-en-ciel après la pluie</string>
    <string name="img2_8_2">Un arc-en-ciel dans les nuages</string>
    <string name="img2_9">Des biscuits sur une assiette</string>
    <string name="img2_9_1">Des fruits sur une assiette</string>
    <string name="img2_9_2">Des gâteaux sur un plat</string>
    <string name="img3_0">Un couteau</string>
    <string name="img3_0_1">@string/img_9</string>
    <string name="img3_0_2">@string/img_9_2</string>
    <string name="img3_1">@string/img_15</string>
    <string name="img3_1_1">@string/img_19</string>
    <string name="img3_1_2">@string/img_12</string>
    <string name="img3_2">La lune</string>
    <string name="img3_2_1">@string/img_5</string>
    <string name="img3_2_2">@string/img_5_1</string>
    <string name="img3_3">@string/img_4_2</string>
    <string name="img3_3_1">@string/img_4</string>
    <string name="img3_3_2">Une marguerite</string>
    <string name="img3_4">@string/img_8_1</string>
    <string name="img3_4_1">@string/img_8</string>
    <string name="img3_4_2">Un banc</string>
    <string name="img3_5">Des frites</string>
    <string name="img3_5_1">Du poulet</string>
    <string name="img3_5_2">De la compote</string>
    <string name="img3_6">Des graviers</string>
    <string name="img3_6_1">De l\'herbe</string>
    <string name="img3_6_2">De la terre</string>
    <string name="img3_7">De l\'eau</string>
    <string name="img3_7_1">Du café</string>
    <string name="img3_7_2">Du jus</string>
    <string name="img3_8">Une pomme</string>
    <string name="img3_8_1">@string/img_2</string>
    <string name="img3_8_2">Des cerises</string>
    <string name="img3_9">Un rond rouge</string>
    <string name="img3_9_1">Un carré jaune</string>
    <string name="img3_9_2">Un triangle vert</string>
    <string name="str_1">à</string>
    <string name="str_2">acheter</string>
    <string name="str_3">aider</string>
    <string name="str_4">aimer</string>
    <string name="str_5">aller</string>
    <string name="str_6">alors</string>
    <string name="str_7">ami</string>
    <string name="str_8">amusant</string>
    <string name="str_9">an</string>
    <string name="str_10">animal</string>
    <string name="str_11">année</string>
    <string name="str_12">apprendre</string>
    <string name="str_13">après-midi</string>
    <string name="str_14">arbre</string>
    <string name="str_15">armoire</string>
    <string name="str_16">arriver</string>
    <string name="str_17">assez</string>
    <string name="str_18">attendre</string>
    <string name="str_19">au</string>
    <string name="str_20">aussi</string>
    <string name="str_21">auto</string>
    <string name="str_22">autre</string>
    <string name="str_23">avant</string>
    <string name="str_24">avec</string>
    <string name="str_25">avion</string>
    <string name="str_26">avis</string>
    <string name="str_27">avoir</string>
    <string name="str_28">avril</string>
    <string name="str_29">balle</string>
    <string name="str_30">ballon</string>
    <string name="str_31">banc</string>
    <string name="str_32">bas</string>
    <string name="str_33">bateau</string>
    <string name="str_34">beau</string>
    <string name="str_35">beaucoup</string>
    <string name="str_36">bébé</string>
    <string name="str_37">bête</string>
    <string name="str_38">bien</string>
    <string name="str_39">bientôt</string>
    <string name="str_40">blanc</string>
    <string name="str_41">bleu</string>
    <string name="str_42">boire</string>
    <string name="str_43">bois</string>
    <string name="str_44">bon</string>
    <string name="str_45">bonbon</string>
    <string name="str_46">bonhomme</string>
    <string name="str_47">bonjour</string>
    <string name="str_48">bonsoir</string>
    <string name="str_49">bouche</string>
    <string name="str_50">boule</string>
    <string name="str_51">bouquet</string>
    <string name="str_52">bout</string>
    <string name="str_53">branche</string>
    <string name="str_54">bras</string>
    <string name="str_55">bruit</string>
    <string name="str_56">bureau</string>
    <string name="str_57">cadeau</string>
    <string name="str_58">café</string>
    <string name="str_59">cahier</string>
    <string name="str_60">calcul</string>
    <string name="str_61">camarade</string>
    <string name="str_62">camion</string>
    <string name="str_63">car</string>
    <string name="str_64">carnaval</string>
    <string name="str_65">carré</string>
    <string name="str_66">carte</string>
    <string name="str_67">casser</string>
    <string name="str_68">cave</string>
    <string name="str_69">chambre</string>
    <string name="str_70">chanter</string>
    <string name="str_71">chapeau</string>
    <string name="str_72">chaque</string>
    <string name="str_73">chasser</string>
    <string name="str_74">chat</string>
    <string name="str_75">chaud</string>
    <string name="str_76">chemin</string>
    <string name="str_77">chemise</string>
    <string name="str_78">cher</string>
    <string name="str_79">chercher</string>
    <string name="str_80">cheval</string>
    <string name="str_81">cheveu</string>
    <string name="str_82">chez</string>
    <string name="str_83">chien</string>
    <string name="str_84">chocolat</string>
    <string name="str_85">chose</string>
</resources>