<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondsimple"
    tools:context="be.manabu.FlashActivity" >

    <ImageView
        android:layout_width="128px"
        android:layout_height="128px"
        android:background="@drawable/help"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_margin="20dp"
        android:onClick="afficheDialog"/>

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center" >

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/duree"
        style="@style/texteBleu"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_weight="1">


        <Button
            android:id="@+id/moins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="decrementer"
            android:textSize="25sp"
            android:text="@string/moins"
            android:textColor="@color/DarkGoldfish"
            android:background="@color/Transparent"/>
        <TextView
            android:id="@+id/TVSecondesFlash"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="20dp"
            android:background="@color/White"/>
        <Button
            android:id="@+id/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="incrementer"
            android:text="@string/plus"
            android:textSize="25sp"
            android:textColor="@color/DarkGoldfish"
            android:background="@color/Transparent"/>
        </LinearLayout>
    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/bFlashStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="startFlash"
        android:text="@string/demarrerjeu"
        android:textColor="#FFF"
        android:background="@drawable/button_menu"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_margin="5dp"/>
    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>


</LinearLayout>
</RelativeLayout>