<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@drawable/fond"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="be.manabu.ImgActivity" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/niveau"
            android:textColor="@color/White"/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:onClick="changeLvl1"
            android:background="@drawable/etoile_oui"/>
        <ImageView
            android:id="@+id/EtoileLvl2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:onClick="changeLvl2"
            android:background="@drawable/etoile_non"/>
        <ImageView
            android:id="@+id/EtoileLvl3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:onClick="changeLvl3"
            android:background="@drawable/etoile_non"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <Button
            android:id="@+id/bRegles"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="afficheRegles"
            android:text="@string/regles"
            android:textColor="#FFF"
            android:background="@drawable/button_menu"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/bStart"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="start"
            android:text="@string/demarrerjeu"
            android:textColor="#FFF"
            android:background="@drawable/button_menu"
            android:padding="5dp"
            android:layout_margin="5dp"/>
        </LinearLayout>


    </LinearLayout>
