<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fond"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="be.manabu.MainActivity" >
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="horizontal" >

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

            <Button
                android:id="@+id/bAnagrammes"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="startAnagrammes"
                android:text="@string/ana"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textColor="#FFF"
                android:background="@drawable/button_menu"
                android:layout_margin="5dp"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/bSon"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="startSon"
                android:text="@string/son"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textColor="#FFF"
                android:background="@drawable/button_menu"
                android:layout_margin="5dp"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3" />
        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

            <Button
                android:id="@+id/bImg"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="startImagerie"
                android:text="@string/img"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textColor="#FFF"
                android:background="@drawable/button_menu"
                android:layout_margin="5dp"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/bFlash"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="startFlash"
                android:text="@string/flash"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textColor="#FFF"
                android:background="@drawable/button_menu"
                android:layout_margin="5dp"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3" />
        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2" />
    </LinearLayout>

</RelativeLayout>